--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,4 @@
-{
+({
   "version": 2,
   "builds": [
     {
@@ -14,23 +14,11 @@
       "src": "/(.*)",
       "headers": [
         {
-          "key": "Access-Control-Allow-Origin",
+          "Key": "Access-Control-Allow-Origin",
           "value": "https://mern-auth-frontend-alpha-two.vercel.app"
         },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        }
-      ],
+      ] ,
       "dest": "server.js"
     }
   ]
-}
+} )
